# qt-engine

./: CMakeLists.txt  Physics.cpp  Physics.h  camera.cpp  camera.h  entity.cpp  entity.h  main.cpp  material.cpp  material.h  mesh.cpp  mesh.h  openglwidget.cpp  openglwidget.h
lib/: Bullet3Common.lib  BulletInverseDynamics.lib  LinearMath.lib
shaders/: f_shader.frag  v_shader.vert
